--- a/app/static/css/navbar1.css
+++ b/app/static/css/navbar1.css
@@ -1,3 +1,46 @@
 .titleNavbar{
     color:yellow;
 }
+.topheader{
+    box-shadow: 0 4px 5px var(--navbar-shallow-color);
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    background-color: var(--theme-color);
+}
+.topnav{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    max-width: 980px;
+    margin: 0 auto;
+}
+/* Logo */
+.logo{
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 500;
+    color: var(--primary-color)
+}
+.logo img{
+    border-radius: 50%;
+}
+/* Menu */
+.menu{
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.menu li{
+    padding: 0 15px;
+}
+.menu a{
+    color: var(--text-color);
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 50px;
+    text-transform: uppercase;
+}
