--- a/app/templates/navbar1.html
+++ b/app/templates/navbar1.html
@@ -1,11 +1,21 @@
 {% block customCSS%}
-<link rel="stylesheet" href="{{url_for('static',filename="css/navbar1.css")}}">
+<link rel="stylesheet" href="{{url_for('static',filename='css/navbar1.css')}}">
 
 {%endblock%}
 
 
 <header class="topheader">
     <nav class="topnav">
-        <h2 class="titleNavbar">Login2</h2>
+        <a href="{{url_for('public.home')}}" class="logo">
+            <img height="50" width="50" src="../static/img/peresozo.jpg" alt="peresozo">
+            <div>Enseñanza de la Matemática <br> en Costa Rica</div>
+        </a>
+        <ul class="menu">
+            <li><a href="#">Infographic</a></li>
+            <li><a href="{{url_for('public.aboutus')}}">About us</a></li>
+            <li><a href="{{url_for('admin.users')}}">Admin</a></li>
+            <li><a href="{{url_for('auth.signup')}}">Sign in</a></li>
+            <li><a href="{{url_for('auth.login')}}">Login </a></li>
+        </ul>
     </nav>
 </header>
