It has added buttons open and close

--- a/app/templates/navbar1.html
+++ b/app/templates/navbar1.html
@@ -10,6 +10,12 @@
             <img height="50" width="50" src="../static/img/peresozo.jpg" alt="peresozo">
             <div>Enseñanza de la Matemática <br> en Costa Rica</div>
         </a>
+        <buttton class="open-menu" aria-label="Abrir menú">
+            <img src="../static/img/icons8-menu.svg" alt="abrir menu">
+        </buttton>
+        <buttton class="cerrar-menu" aria-label="Cerrar menú">
+            <img src="../static/img/icons8-close.svg" alt="cerrar menu">
+        </buttton>
         <ul class="menu">
             <li><a href="#">Infographic</a></li>
             <li><a href="{{url_for('public.aboutus')}}">About us</a></li>
