--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{%block title%}{%endblock%}</title>
+    <title>{% block title %}{% endblock %}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -11,14 +11,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"
     />
     <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}">
-    {%block customCSS%}
-    {%endblock%}
+    <link rel="stylesheet" href="{{url_for('static', filename='css/navbar1.css')}}">
+    {% block customCSS %}
+    {% endblock %}
+    <script defer src="{{url_for('static',filename='js/app.js')}}"></script>
+    <script defer src="{{url_for('static',filename='js/scripts.js')}}"></script>
+
 </head>
+{% include './navbar1.html' %}
+
 <body>
-  <section class="contenido">
-    {% block body%}
-    {%endblock%}
-  </section>
+
+    {% block content %}
+    {% endblock %}
+  
+  
 
 </body>
 </html>
