--- a/app/auth/templates/auth/signup.html
+++ b/app/auth/templates/auth/signup.html
@@ -1,9 +1,9 @@
-{% extends "body.html" %}
+{% extends "base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Sign up{% endblock %}
 
 
-{% block container%}
+{% block content %}
 
 <div class="main">
             <h2>Sign up</h2>
