--- a/app/public/templates/public/aboutus.html
+++ b/app/public/templates/public/aboutus.html
@@ -1,12 +1,12 @@
-{% extends "body.html" %}
+{% extends "base.html" %}
 
 {% block title %}About us{% endblock %}
 
-{%block customCSS%}
+{% block customCSS %}
 <link rel="stylesheet" href="{{url_for('static', filename='css/public/aboutus.css')}}">
 {%endblock%}
 
-{% block container%}
+{% block content %}
 
 <div class="main">
             <h2 class="title5">About us</h2>
