Implementado section de la pagina

--- a/app/auth/templates/auth/signup.html
+++ b/app/auth/templates/auth/signup.html
@@ -5,10 +5,11 @@
 
 {% block content %}
 
-<div class="main">
-            <h2>Sign up</h2>
+<section class="content">
+    <h2 class="title">Sign up</h2>
 
-</div>
+</section>
+
 
 
 {% endblock %}
