--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/navbar1.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/content.css')}}">
     {% block customCSS %}
     {% endblock %}
     <script defer src="{{url_for('static',filename='js/app.js')}}"></script>
