--- a/app/admin/templates/admin/users.html
+++ b/app/admin/templates/admin/users.html
@@ -8,8 +8,9 @@
 
 
 {% block content%}
-<div class="main">
-            <h2 class="title3">Users</h2>
+<section class="content">
+    <h2 class="title">Users</h2>
 
-</div>
+</section>
+
 {% endblock %}
