--- a/app/auth/templates/auth/login.html
+++ b/app/auth/templates/auth/login.html
@@ -8,10 +8,10 @@
 
 {% block content %}
 
-<div class="main">
-            <h2 class="title2">Login</h2>
+<section class="content">
+    <h2 class="title">Login</h2>
 
-</div>
+</section>
 
 
 {% endblock %}
