--- a/app/public/templates/public/aboutus.html
+++ b/app/public/templates/public/aboutus.html
@@ -8,10 +8,10 @@
 
 {% block content %}
 
-<div class="main">
-            <h2 class="title5">About us</h2>
+<section class="content">
+            <h2 class="title">About us</h2>
 
-</div>
+</section>
 
 
 
