--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -6,13 +6,18 @@
     --primary-color: #124f88;
     --secondary-color: #F7C331;
     --navbar-shallow-color: #e5e5e5;
-    --menu-mobile-bc-color: #3A4460
-
+    --menu-mobile-bc-color: #3A4460;
+    /* own color */
+    --navbar-bc-color:#66bfbf;
+    --background-website-color:#eaf6f6;
+    --body-website-color:#fcfefe;
+    --title-text-color: #f76b8a
+    /* palettes: https://www.shecodes.io/palettes/1293 */
 }
 /* // <uniquifier>: Use a unique and descriptive class name
 // <weight>: Use a value from 100 to 900 */
 body {
-    background: var(--color-background);
+    background: var(--background-website-color);
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
