--- a/app/admin/templates/admin/users.html
+++ b/app/admin/templates/admin/users.html
@@ -10,7 +10,30 @@
 {% block content%}
 <section class="content">
     <h2 class="title">Users</h2>
-
+    <div class="usuarios">
+        <table>
+            <tr>
+                <th>id</th>
+                <th>Nombre</th>
+                <th>Apellidos</th>
+                <th>Email</th>
+                <th>Password</th>
+                <th>Fecha de creacion</th>
+            </tr>
+            {% for usuario in usuarios %}
+            <tr>
+                <td>{{usuario.id}}</td>
+                <td>{{usuario.nombre}}</td>
+                <td>{{usuario.apellido}}</td>
+                <td>{{usuario.correo}}</td>
+                <td>{{usuario.contrasena}}</td>
+                <td>{{usuario.date_added}}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
 </section>
 
 {% endblock %}
+
+<!-- https://www.w3schools.com/html/html_tables.asp -->
