--- a/app/auth/templates/auth/login.html
+++ b/app/auth/templates/auth/login.html
@@ -10,6 +10,9 @@
 
 <section class="content">
     <h2 class="title">Login</h2>
+    {% for message in get_flashed_messages() %}
+    <div style="color: red;">{{ message }}</div>            
+    {% endfor %}
 
 </section>
 
