--- a/app/static/css/content.css
+++ b/app/static/css/content.css
@@ -2,6 +2,7 @@
     background-color: var(--body-website-color);
     max-width: 980px;
     height: 600px;
+    min-height:fit-content;
     margin: 0 auto;
     padding: 20px 30px;
     box-shadow: 2px 4px 5px var(--navbar-shallow-color);
