--- a/app/static/css/navbar1.css
+++ b/app/static/css/navbar1.css
@@ -13,14 +13,14 @@
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    max-width: 980px;
+    max-width: 1170px;
     margin: 0 auto;
 }
 /* Logo */
 .logo{
     display: flex;
     align-items: center;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 800;
     color: var(--primary-color);
     text-align: center;
@@ -41,10 +41,18 @@
 }
 .menu a, .welcome{
     color: var(--nav-links-color);
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 700;
     line-height: 50px;
     text-transform: uppercase;
+}
+.menu-user{
+    color: var(--title-text-color);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 50px;
+    text-transform: uppercase;
+
 }
 .open-menu, .close-menu{
     display:none;
