--- a/app/templates/navbar1.html
+++ b/app/templates/navbar1.html
@@ -13,7 +13,7 @@
             <buttton class="close-menu cerrar-menu" aria-label="Cerrar menú">
                 <img src="../static/img/close-icon.svg" alt="cerrar menu">
             </buttton>
-            <!-- <li><a href="#">Infographic</a></li> -->
+            <li><a href="#">Infographic</a></li>
             <li><a href="{{url_for('public.aboutus')}}">About us</a></li>
             <li><a href="{{url_for('admin.users')}}" >Admin</a></li>
             {% if current_user.is_anonymous %}
@@ -22,7 +22,7 @@
             {% else %}
             <li>{{ current_user.name }}</li>
             <!-- <li class="welcome">Welcome, <span id="user">{{current_user.nombre}}</span></li> -->
-            <li><span>Welcome, {{current_user.nombre}}</span><a href="{{ url_for('auth.logout') }}"> | Logout</a></li>
+            <li><span class="menu-user">Welcome, {{current_user.nombre}}</span><a href="{{ url_for('auth.logout') }}"> | Logout</a></li>
             {% endif %}
         </ul>
     </nav>
