Login successfull implement

--- a/app/admin/templates/admin/users.html
+++ b/app/admin/templates/admin/users.html
@@ -17,7 +17,7 @@
                 <th>Nombre</th>
                 <th>Apellidos</th>
                 <th>Email</th>
-                <th>Password</th>
+                <!-- <th>Password</th> -->
                 <th>Fecha de creacion</th>
             </tr>
             {% for usuario in usuarios %}
@@ -26,7 +26,7 @@
                 <td>{{usuario.nombre}}</td>
                 <td>{{usuario.apellido}}</td>
                 <td>{{usuario.correo}}</td>
-                <td>{{usuario.contrasena}}</td>
+                <!-- <td>{{usuario.contrasena}}</td> -->
                 <td>{{usuario.date_added}}</td>
             </tr>
             {% endfor %}
