It begins with the implementation of exceptions

--- a/app/auth/templates/auth/login.html
+++ b/app/auth/templates/auth/login.html
@@ -33,7 +33,7 @@
             </div>
         </form>
     </div>
-    <div>¿No tienes cuenta? <a href="{{ url_for('auth.signup') }}">Regístrate</a></div>
+    <div>¿No tienes cuenta? <a href="{{ url_for('auth.signup') }}" class="special">Regístrate</a></div>
     </div>
 
 </section>
