--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <section class="content">
-        <p>Page not found</p>
+        <p>Ooops!! Page not found</p>
     </section>
-    Ooops!! La página que buscas no existe xD
+
 {% endblock %}
