--- a/app/templates/navbar1.html
+++ b/app/templates/navbar1.html
@@ -1,5 +1,5 @@
 
-{% block content %}
+
 <header class="topheader">
     <nav class="topnav">
         <a href="{{url_for('public.home')}}" class="logo">
@@ -14,6 +14,7 @@
                 <img src="../static/img/close-icon.svg" alt="cerrar menu">
             </buttton>
             <li><a href="#">Infographic</a></li>
+            <li><a href="{{url_for('admin.postform')}}">Post</a></li>
             <li><a href="{{url_for('public.aboutus')}}">About us</a></li>
             <li><a href="{{url_for('admin.users')}}" >Admin</a></li>
             {% if current_user.is_anonymous %}
@@ -27,4 +28,3 @@
         </ul>
     </nav>
 </header>
-{%endblock%}
