It implements flask-migrations

--- a/app/admin/templates/admin/users.html
+++ b/app/admin/templates/admin/users.html
@@ -17,6 +17,7 @@
                 <th>Nombre</th>
                 <th>Apellidos</th>
                 <th>Email</th>
+                <th>Admin</th>
                 <!-- <th>Password</th> -->
                 <th>Fecha de creacion</th>
             </tr>
@@ -26,6 +27,7 @@
                 <td>{{usuario.nombre}}</td>
                 <td>{{usuario.apellido}}</td>
                 <td>{{usuario.correo}}</td>
+                <td>{{usuario.is_admin}}</td>
                 <!-- <td>{{usuario.contrasena}}</td> -->
                 <td>{{usuario.date_added}}</td>
             </tr>
