It's working the change admin and I added a prefix to the route admin

--- a/app/admin/templates/admin/userForm.html
+++ b/app/admin/templates/admin/userForm.html
@@ -31,5 +31,6 @@
     <!-- <form action="">
 
     </form> -->
+    <img src="{{url_for('static',filename='admin/controlar.png')}}" alt="">
 </section>
 {% endblock %}
