--- a/app/templates/navbar1.html
+++ b/app/templates/navbar1.html
@@ -3,7 +3,7 @@
 <header class="topheader">
     <nav class="topnav">
         <a href="{{url_for('public.home')}}" class="logo">
-            <img height="50" width="50" src="../static/img/peresozo.jpg" alt="peresozo">
+            <img height="50" width="50" src="{{url_for('static',filename='img/peresozo.jpg')}}" alt="peresozo">
             <div>Enseñanza de la Matemática <br> en Costa Rica</div>
         </a>
         <buttton class="open-menu abrir-menu" aria-label="Abrir menú">
