I worked in delete and update post like admin

--- a/app/admin/templates/admin/admin-post-view.html
+++ b/app/admin/templates/admin/admin-post-view.html
@@ -18,8 +18,8 @@
             </tr>
             <tr>
                 <td>{{post.title}}</td>
-                <td>{{post.user_id}}</td>
-                <td>{{post.user_id}}</td>
+                <td>{{post.user.nombre}} {{post.user.apellido}}</td>
+                <td>{{post.date_added}}</td>
                 <td>
                     <a type="button" href="{{url_for('admin.delete_post', post_id=post.id)}}" class="special">Delete</a>
                 </td>
