--- a/app/templates/navbar1.html
+++ b/app/templates/navbar1.html
@@ -15,17 +15,38 @@
                 <!-- <img src="../static/img/close-icon.svg" alt="cerrar menu"> -->
                 <img src="{{url_for('static',filename='img/close-icon.svg')}}" alt="abrir menu">
             </buttton>
-            <li><a href="#">Infographic</a></li>
-            <li><a href="{{url_for('admin.postform')}}">Post</a></li>
-            <li><a href="{{url_for('public.aboutus')}}">About us</a></li>
-            <li><a href="{{url_for('admin.adminIndex')}}" >Admin</a></li>
+            <!-- <li><a href="#">Infographic</a></li> -->
+            <li class="menu-li"><a href="{{url_for('admin.postform')}}">Post</a></li>
+            <li class="menu-li"><a href="{{url_for('public.aboutus')}}">About us</a></li>
+            {% if current_user.is_admin %}
+            <li class="menu-li"><a href="{{url_for('admin.adminIndex')}}" >Admin</a></li>
+            {% endif %}
             {% if current_user.is_anonymous %}
-            <li><a href="{{url_for('auth.signup')}}" >Sign in</a></li>
-            <li><a href="{{url_for('auth.login')}}">Login </a></li>
+            <li class="menu-li"><a href="{{url_for('auth.signup')}}" >Sign in</a></li>
+            <li class="menu-li"><a href="{{url_for('auth.login')}}">Login </a></li>
             {% else %}
-            <li>{{ current_user.name }}</li>
-            <!-- <li class="welcome">Welcome, <span id="user">{{current_user.nombre}}</span></li> -->
-            <li><span class="menu-user">Welcome, {{current_user.nombre}}</span><a href="{{ url_for('auth.logout') }}"> | Logout</a></li>
+                {% if current_user.is_admin %}
+                    <li>
+                        <span class="menu-user">Welcome, Admin:</span>
+                        <span class="menu-name"> {{current_user.nombre}}</span>
+                    <li>
+                        <span class="menu-split">|</span>
+                    </li>
+                    <li class="menu-li">
+                        <a href="{{ url_for('auth.logout') }}">Logout</a>
+                    </li>
+                {% else %}    
+                    <li>
+                        <span class="menu-user">Welcome, User: </span>
+                        <span class="menu-name">{{current_user.nombre}}</span>
+                    </li>
+                    <li>
+                        <span class="menu-split">|</span>
+                    </li>
+                    <li class="menu-li">
+                        <a href="{{ url_for('auth.logout') }}">Logout</a>
+                    </li>
+                {% endif %}    
             {% endif %}
         </ul>
     </nav>
