Cambio ubicación dde path local  del proyecto

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -4,6 +4,7 @@
     --text-color: black;
     --text-color-inverse:white;
     --primary-color: #124f88;
+    --_nav-link-color:hsl(37, 93%, 64%);
     --secondary-color: #F7C331;
     --navbar-shallow-color: #e5e5e5;
     --menu-mobile-bc-color: #3A4460;
