--- a/app/static/css/navbar1.css
+++ b/app/static/css/navbar1.css
@@ -40,7 +40,8 @@
     padding: 0 15px;
 }
 .menu a {
-    color: var(--nav-links-color);
+    /* color: var(--nav-links-color); */
+    color: var(--_nav-link-color);
     font-size: 16px;
     font-weight: 700;
     line-height: 50px;
