It's added date published and autor

--- a/app/admin/templates/admin/admin.html
+++ b/app/admin/templates/admin/admin.html
@@ -3,6 +3,11 @@
 {% block title %}Miniblog | Admin{% endblock %}
 
 
+{% block customCSS %}
+<link rel="stylesheet" href="{{url_for('static', filename='css/admin.css')}}">
+{% endblock %}
+
+
 {% block content %}
 <section class="content">
 
