--- a/app/auth/templates/auth/login.html
+++ b/app/auth/templates/auth/login.html
@@ -2,9 +2,9 @@
 
 {% block title %}Login {% endblock %}
 
-{%block customCSS%}
-<link rel="stylesheet" href="{{url_for('static', filename='css/auth/login.css')}}">
-{%endblock%}
+{% block customCSS %}
+<link rel="stylesheet" href="{{url_for('static', filename='css/auth.css')}}">
+{% endblock %}
 
 {% block content %}
 
