--- a/app/auth/templates/auth/signup.html
+++ b/app/auth/templates/auth/signup.html
@@ -2,7 +2,7 @@
 {% block title %}Sign up{% endblock %}
 
 {% block customCSS %}
-<link rel="stylesheet" href="{{url_for('static', filename='css/auth/signup.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='css/auth.css')}}">
 {% endblock %}
 
 {% block content %}
