--- a/app/public/templates/public/aboutus.html
+++ b/app/public/templates/public/aboutus.html
@@ -3,8 +3,9 @@
 {% block title %}About us{% endblock %}
 
 {% block customCSS %}
-<link rel="stylesheet" href="{{url_for('static', filename='css/public/aboutus.css')}}">
-{%endblock%}
+<link rel="stylesheet" href="{{url_for('static', filename='css/public.css')}}">
+{% endblock %}
+
 
 {% block content %}
 
