--- a/app/admin/templates/admin/admin-posts.html
+++ b/app/admin/templates/admin/admin-posts.html
@@ -3,10 +3,9 @@
 
 {% block title %}Admin | List Posts{% endblock %}
 
-{%block customCSS%}
-<link rel="stylesheet" href="{{url_for('static', filename='css/admin/admin-posts.css')}}">
-{%endblock%}
-
+{% block customCSS %}
+<link rel="stylesheet" href="{{url_for('static', filename='css/admin.css')}}">
+{% endblock %}
 
 {% block content %}
 <section class="content">
@@ -24,7 +23,7 @@
             </tr>
             {% for post in posts %}
             <tr>
-                <td>{{post.id}}</td>
+                <td>{{loop.index}}</td>
                 <td>
                     <a href="{{url_for('admin.view_post',post_id=post.id)}}" class="special">{{post.title}}</a>
                 </td>
