--- a/app/admin/templates/admin/userForm.html
+++ b/app/admin/templates/admin/userForm.html
@@ -2,9 +2,9 @@
 
 {% block title %}Admin{% endblock %}
 
-{%block customCSS%}
-<link rel="stylesheet" href="{{url_for('static', filename='css/admin/users.css')}}">
-{%endblock%}
+{% block customCSS %}
+<link rel="stylesheet" href="{{url_for('static', filename='css/admin.css')}}">
+{% endblock %}
 
 {% block content%}
 <section class="content">
@@ -31,6 +31,5 @@
     <!-- <form action="">
 
     </form> -->
-    <img src="{{url_for('static',filename='admin/controlar.png')}}" alt="">
 </section>
 {% endblock %}
