--- a/app/admin/templates/admin/users.html
+++ b/app/admin/templates/admin/users.html
@@ -2,9 +2,9 @@
 
 {% block title %}Admin{% endblock %}
 
-{%block customCSS%}
-<link rel="stylesheet" href="{{url_for('static', filename='css/admin/users.css')}}">
-{%endblock%}
+{% block customCSS %}
+<link rel="stylesheet" href="{{url_for('static', filename='css/admin.css')}}">
+{% endblock %}
 
 
 {% block content%}
