--- a/app/public/templates/public/home.html
+++ b/app/public/templates/public/home.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block customCSS %}
-<link rel="stylesheet" href="{{url_for('static', filename='css/public/home.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='css/public.css')}}">
 {% endblock %}
 
 {% block content %}
