--- a/app/static/css/auth.css
+++ b/app/static/css/auth.css
@@ -1,3 +1,16 @@
+.title2{
+    color:rgb(15, 102, 12);
+    text-align: center;
+}
+
+/* a:not(.special){
+    text-decoration: none;
+    color: var(--text-color);
+} 
+https://www.w3schools.com/cssref/sel_not.php    
+*/
+/* -------- sign up --------  */
+
 .formulario{
     background-color:var(--bc-form-color);
     border: 3px solid var(--bc-border-color);
