I've added styles to loging

--- a/app/auth/templates/auth/login.html
+++ b/app/auth/templates/auth/login.html
@@ -9,31 +9,32 @@
 {% block content %}
 
 <section class="content">
-    <h2 class="title">Login</h2>
-    <div>
-        <form action="" method="post" novalidate>
+    <h2 class="title title-login">Login</h2>
+    <div class="container-formulario">
+        <form class="formulario-login" method="post" novalidate>
             {{ form.hidden_tag() }}
-            <div>
+            <div class="formulario-login-email">
                 {{ form.email.label }}
                 {{ form.email}}<br>
                 {% for error in form.email.errors %}
                 <span style="color: red;">{{ error }}</span>
                 {% endfor %}
             </div>
-            <div>
+            <div class="formulario-login-password">
                 {{ form.password.label }}
                 {{ form.password}}<br>
                 {% for error in form.password.errors %}
                 <span style="color: red;">{{ error }}</span>
                 {% endfor %}
             </div>
-            <div>{{ form.remember_me() }} {{ form.remember_me.label }}</div>
-            <div>
+            <div class="formulario-login-remember">
+                {{ form.remember_me() }} {{ form.remember_me.label }}</div>
+            <div class="formulario-login-submit">
                 {{ form.submit() }}
             </div>
         </form>
-    </div>
-    <div>¿No tienes cuenta? <a href="{{ url_for('auth.signup') }}" class="special">Regístrate</a></div>
+        <div class="formulario-login-registrate">¿No tienes cuenta? <a href="{{ url_for('auth.signup') }}" class="special">Regístrate</a></div>
+        </div>
     </div>
 
 </section>
