--- a/app/auth/templates/auth/signup.html
+++ b/app/auth/templates/auth/signup.html
@@ -13,7 +13,7 @@
     {% if error %}
     <p style="color: red">{{ error }}</p>
     {% endif %}
-    <form action="" method="post" novalidate>
+    <form class="" action="" method="post" novalidate>
       {{form.hidden_tag()}}
       <div>
         <div class="formulario-name">
