--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -32,6 +32,7 @@ body {
     font-weight: 400;
     font-style: normal;
     padding-top: 80px;
+    /* height:100vh; */
 }
 a{
     text-decoration: none;
