--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -38,3 +38,20 @@ a{
     text-decoration: none;
     color: var(--text-color)
 }
+
+.alert {
+    padding: 15px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+.alert-success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+.alert-danger {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
