I am preparing to begin with the test

--- a/app/admin/templates/admin/admin-post-view.html
+++ b/app/admin/templates/admin/admin-post-view.html
@@ -29,9 +29,12 @@
         </table>
     </div>
 
-    <p class="content-text">
+    <!-- <p class="content-text">
         {{ post.content }}
-    </p>
+    </p> -->
+    <article>
+        {{ post.content | safe }}
+    </article>
 </section>
 
 
